; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/crypto/extr_tls_wolfssl.c_tls_match_alt_subject_component.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/crypto/extr_tls_wolfssl.c_tls_match_alt_subject_component.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i64 }

@ALT_NAMES_OID = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i8*, i64)* @tls_match_alt_subject_component to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tls_match_alt_subject_component(i32* %0, i32 %1, i8* %2, i64 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca %struct.TYPE_3__*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i64 %3, i64* %8, align 8
  store i32 0, i32* %11, align 4
  %13 = load i32*, i32** %5, align 8
  %14 = load i32, i32* @ALT_NAMES_OID, align 4
  %15 = call i8* @wolfSSL_X509_get_ext_d2i(i32* %13, i32 %14, i32* null, i32* null)
  store i8* %15, i8** %10, align 8
  store i32 0, i32* %12, align 4
  br label %16

16:                                               ; preds = %56, %4
  %17 = load i8*, i8** %10, align 8
  %18 = icmp ne i8* %17, null
  br i1 %18, label %19, label %24

19:                                               ; preds = %16
  %20 = load i32, i32* %12, align 4
  %21 = load i8*, i8** %10, align 8
  %22 = call i32 @wolfSSL_sk_num(i8* %21)
  %23 = icmp slt i32 %20, %22
  br label %24

24:                                               ; preds = %19, %16
  %25 = phi i1 [ false, %16 ], [ %23, %19 ]
  br i1 %25, label %26, label %59

26:                                               ; preds = %24
  %27 = load i8*, i8** %10, align 8
  %28 = load i32, i32* %12, align 4
  %29 = call %struct.TYPE_3__* @wolfSSL_sk_value(i8* %27, i32 %28)
  store %struct.TYPE_3__* %29, %struct.TYPE_3__** %9, align 8
  %30 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %31 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 8
  %33 = load i32, i32* %6, align 4
  %34 = icmp ne i32 %32, %33
  br i1 %34, label %35, label %36

35:                                               ; preds = %26
  br label %56

36:                                               ; preds = %26
  %37 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %38 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %37, i32 0, i32 1
  %39 = load i64, i64* %38, align 8
  %40 = inttoptr i64 %39 to i8*
  %41 = call i64 @os_strlen(i8* %40)
  %42 = load i64, i64* %8, align 8
  %43 = icmp eq i64 %41, %42
  br i1 %43, label %44, label %55

44:                                               ; preds = %36
  %45 = load i8*, i8** %7, align 8
  %46 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %47 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %46, i32 0, i32 1
  %48 = load i64, i64* %47, align 8
  %49 = load i64, i64* %8, align 8
  %50 = call i64 @os_memcmp(i8* %45, i64 %48, i64 %49)
  %51 = icmp eq i64 %50, 0
  br i1 %51, label %52, label %55

52:                                               ; preds = %44
  %53 = load i32, i32* %11, align 4
  %54 = add nsw i32 %53, 1
  store i32 %54, i32* %11, align 4
  br label %55

55:                                               ; preds = %52, %44, %36
  br label %56

56:                                               ; preds = %55, %35
  %57 = load i32, i32* %12, align 4
  %58 = add nsw i32 %57, 1
  store i32 %58, i32* %12, align 4
  br label %16

59:                                               ; preds = %24
  %60 = load i8*, i8** %10, align 8
  %61 = call i32 @wolfSSL_sk_ASN1_OBJECT_free(i8* %60)
  %62 = load i32, i32* %11, align 4
  ret i32 %62
}

declare dso_local i8* @wolfSSL_X509_get_ext_d2i(i32*, i32, i32*, i32*) #1

declare dso_local i32 @wolfSSL_sk_num(i8*) #1

declare dso_local %struct.TYPE_3__* @wolfSSL_sk_value(i8*, i32) #1

declare dso_local i64 @os_strlen(i8*) #1

declare dso_local i64 @os_memcmp(i8*, i64, i64) #1

declare dso_local i32 @wolfSSL_sk_ASN1_OBJECT_free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
